--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Quiz App</title>
 
     <!-- Adding CSS File -->
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <title>Quiz App</title>
+
+    <!-- Adding JS File -->
+    <script defer src="app.js"></script>
+
 </head>
 
 <body>
